[package]
name = "boost-msm-grapher"
version = "0.1.0"
authors = ["Arkadiusz Piekarz <piekarzarkadiusz@gmail.com>"]
edition = "2021"

[dependencies]
regex = "1.7.1"

[dev-dependencies]
assert_cmd = { version = "2.0.8", default-features = false }
tempfile = { version = "3.3.0", default-features = false }
