[package]
name = "boost-msm-grapher"
version = "0.1.0"
authors = ["Arkadiusz Piekarz <piekarzarkadiusz@gmail.com>"]
edition = "2021"

[dependencies]
regex = "1.9.1"

[dev-dependencies]
assert_cmd = { version = "2.0.12", default-features = false }
tempfile = { version = "3.7.0", default-features = false }
